# pod-upgrade-trigger

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  DEBUG_SIGNATURE_OVERRIDE  Dockerfile  README.md  TODO.md  build.rs  lefthook.yml  ratelimit.db
.serena/: project.yml
docs/: container-deploy.md  deployment-host-systemd-prod.md  desgin.md  e2e-testing.md  frontend-mock.md  host-systemd-release-deploy.md  ops-feedback-2025-11.md  task-management-panel.md  web-ui-design.md
github-image-limits/: ghcr.io_ivanli-cn_codex-vibe-monitor_latest.db  ghcr.io_ivanli-cn_tavily-hikari_latest.db
migrations/: 20250101120000_create_event_log.sql  20250101150000_add_limit_tables.sql  20251123090000_create_discovered_units.sql  20251129090000_create_tasks.sql  20251201120000_add_task_id_to_event_log.sql  20251213090000_create_registry_digest_cache.sql  20251229093000_create_registry_platform_digest_cache.sql
scripts/: demo-server.sh  dev-server.sh  format_staged.sh  self-update-runner.sh  test-e2e-ssh.sh  test-e2e.sh  test-server.sh  test-ui-e2e-mock.sh  test-ui-e2e.sh  update-pod-upgrade-trigger-from-release.sh
src/: host_backend.rs  main.rs  registry_digest.rs  task_executor.rs
systemd/: pod-upgrade-trigger-http.env.example  pod-upgrade-trigger-http.user.service.example  pod-upgrade-trigger-updater.user.service.example  pod-upgrade-trigger-updater.user.timer.example  pod-upgrade-trigger.env.example  pod-upgrade-trigger.service  webhook-auto-update.env.example  webhook-auto-update.service  webhook-auto-update.socket
tests/: config_guard.rs  e2e.rs  e2e_ssh.rs  version_cli.rs
web/: .gitignore  biome.json  index.html  package-lock.json  package.json  (+4 more)
(+89 files in other folders)
