[package]
name = "pod-upgrade-trigger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pod-upgrade-trigger"
path = "src/main.rs"

[dependencies]
regex = "1"
url = { version = "2" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
